--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,116 @@
+*{
+  margin: 0;
+  padding: 0;
+  /* color: white; */
+}
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-around;
+  padding: 20px;
+}
+
+.column {
+  flex: 1;
+  margin: 0 10px;
+  padding: 10px 10px 130px 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  background-color: #656262;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.task-card {
+  background-color: white;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 10px;
+  margin: 10px 0;
+}
+.task-card div {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.gap {
+  margin: 5px;
+  padding: 5px;
+  width: 90%;
+  /* margin-left: 2%; */
+  border: none;
+  text-align: center;
+}
+
+.title1 {
+  font-size: 1.5rem;
+  font-weight: 666;
+}
+
+.desc1 {
+  font-size: .9rem;
+}
+
+.create {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.inp {
+  width: 60%;
+  margin: 5px;
+  padding: 5px;
+}
+
+.create button {
+  font-size: 1rem;
+  font-weight: 666;
+  border: 2px solid black;
+  background-color: rgb(155, 131, 171);
+}
+
+.create button:hover {
+  background-color: rgb(87, 55, 109);
+}
+
+.edit {
+  display: inline-block;
+  margin-left: 90%;
+  padding: 2px 4px;
+  border: 1px solid rgb(30, 28, 28);
+  border-radius: 5px;
+  background-color: #737e86;
+}
+
+.edit:hover {
+  background-color: #a6c5de;
+  cursor: pointer;
+}
+
+.saveEdit {
+  border: 1px solid rgb(255, 0, 204);
+  border-radius: 3px;
+  padding: 5px;
+  margin: 5px;
+  background-color: rgb(71, 147, 122);
+  display: none;
+}
+
+.saveEdit:hover {
+  background-color: rgb(12, 44, 33);
+  color: white;
+}
+
+.status {
+  display: flex;
+  flex-direction: row;
+  width: 93%;
+  justify-content: center;
+}
+
+.status label{
+  margin: 5px;
+  padding: 2px;
 }
