--- a/src/App.css
+++ b/src/App.css
@@ -12,19 +12,27 @@
 .column {
   flex: 1;
   margin: 0 10px;
-  padding: 10px 10px 130px 10px;
+  padding: 0px 0px 130px 0px;
   border: 1px solid #ccc;
-  border-radius: 5px;
-  background-color: #656262;
+  border-radius: 1rem;
+  background-color: #640677;
   color: white;
+}
+
+.column > h1 {
+  margin: 0;
+  padding: 1rem;
+  font-weight: bold;
+  text-align: center;
+  background-color: #091072;
 }
 
 .task-card {
   background-color: white;
   border: 1px solid #ddd;
-  border-radius: 5px;
+  border-radius: 10px;
   padding: 10px;
-  margin: 10px 0;
+  margin: 10px;
 }
 .task-card div {
   display: flex;
@@ -38,8 +46,10 @@
   padding: 5px;
   width: 90%;
   /* margin-left: 2%; */
-  border: none;
+  /* border: none; */
+  border-radius: 10px;
   text-align: center;
+  background-color: #ccc;
 }
 
 .title1 {
@@ -81,7 +91,7 @@
   padding: 2px 4px;
   border: 1px solid rgb(30, 28, 28);
   border-radius: 5px;
-  background-color: #737e86;
+  background-color: #091072;
 }
 
 .edit:hover {
