--- a/src/App.css
+++ b/src/App.css
@@ -3,32 +3,41 @@
   padding: 0;
   /* color: white; */
 }
+
+body {
+  background: linear-gradient(rgba(250, 25, 25, 0.539) , rgba(255, 255, 255, 0.562) , rgba(0, 128, 0, 0.575));
+}
+
 .App {
   display: flex;
   justify-content: space-around;
-  padding: 20px;
 }
 
 .column {
-  flex: 1;
-  margin: 0 10px;
+  overflow: hidden;
+  flex: 5;
+  margin: 5px;
   padding: 0px 0px 130px 0px;
-  border: 1px solid #ccc;
+  border: 2px solid #5b040b;
   border-radius: 1rem;
-  background-color: #640677;
+  background-image: url('../public/india.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: center;
+  /* background-image: url('../public/library.jpg'); */
   color: white;
 }
 
-.column > h1 {
-  margin: 0;
+.tag {
+  overflow: hidden;
   padding: 1rem;
   font-weight: bold;
-  text-align: center;
-  background-color: #091072;
+  text-align: center; 
+  background-color: #84030393;
 }
 
 .task-card {
-  background-color: white;
+  background: linear-gradient(rgba(92, 218, 187, 0.7) , rgba(67, 160, 177, 0.7) , rgba(21, 56, 151, 0.7));
   border: 1px solid #ddd;
   border-radius: 10px;
   padding: 10px;
@@ -49,7 +58,7 @@
   /* border: none; */
   border-radius: 10px;
   text-align: center;
-  background-color: #ccc;
+  background-color: #ffffff;
 }
 
 .title1 {
@@ -66,28 +75,48 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
+  /* background: linear-gradient(rgba(255, 0, 0, 0.263) , rgba(255, 255, 255, 0.276) , rgba(0, 128, 0, 0.295)); */
+  background: url('../public/india.png');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
+  /* border: 2px solid black; */
+  border-radius: 10px;
 }
 
 .inp {
-  width: 60%;
   margin: 5px;
   padding: 5px;
+  border-radius: 10px;
+  font-size: large;
+  border: 2px solid rgb(89, 3, 91);
+  background-color: rgba(204, 200, 200, 0.2);
 }
+
+.width1 {
+  width: 60%;
+}
+
+.width2 {
+  width: 61%;
+}
+
 
 .create button {
   font-size: 1rem;
   font-weight: 666;
   border: 2px solid black;
-  background-color: rgb(155, 131, 171);
+  background-color: rgba(111, 31, 164, 0.7);
 }
 
 .create button:hover {
-  background-color: rgb(87, 55, 109);
+  color: white;
+  background-color: rgb(125, 45, 118);
 }
 
 .edit {
   display: inline-block;
-  margin-left: 90%;
+  /* margin-left: 90%; */
   padding: 2px 4px;
   border: 1px solid rgb(30, 28, 28);
   border-radius: 5px;
@@ -95,32 +124,57 @@
 }
 
 .edit:hover {
-  background-color: #a6c5de;
+  background-color: #056525;
   cursor: pointer;
 }
 
 .saveEdit {
-  border: 1px solid rgb(255, 0, 204);
-  border-radius: 3px;
+  border: 2px solid rgb(218, 184, 11);
+  border-radius: 5px;
   padding: 5px;
   margin: 5px;
-  background-color: rgb(71, 147, 122);
+  background-color: rgb(56, 217, 104);
   display: none;
+  width: 20%;
 }
 
 .saveEdit:hover {
-  background-color: rgb(12, 44, 33);
+  background-color: rgb(68, 9, 90);
   color: white;
 }
 
-.status {
+/* .status {
   display: flex;
   flex-direction: row;
-  width: 93%;
+  width: 100%;
   justify-content: center;
-}
+} */
 
 .status label{
   margin: 5px;
   padding: 2px;
+}
+
+
+
+/* @media only screen and (min-width: 600px) { */
+  /* For tablets: */
+/* } */
+@media only screen and (max-width: 740px) {
+  /* For desktop: */
+  .App {
+    flex-direction: column;
+  }
+
+  .column {
+    margin: 5px;
+  }
+  
+  .task-card {
+    margin: 10px 20px;
+  }
+}
+
+.create > h1 {
+  text-shadow: 1px 1px 1px red;
 }
