--- a/src/App.css
+++ b/src/App.css
@@ -37,7 +37,7 @@ body {
 }
 
 .task-card {
-  background: linear-gradient(rgba(92, 218, 187, 0.7) , rgba(67, 160, 177, 0.7) , rgba(21, 56, 151, 0.7));
+  background: linear-gradient(to top , rgba(92, 218, 187, 0.7) , rgba(67, 160, 177, 0.7) , rgba(21, 56, 151, 0.7));
   border: 1px solid #ddd;
   border-radius: 10px;
   padding: 10px;
